fixed cumulative layout shift

--- a/src/components/showcase/styles/showcase.scss
+++ b/src/components/showcase/styles/showcase.scss
@@ -4,7 +4,7 @@
     align-items: center;
     overflow-x: hidden;
     text-align: center;
-    padding-bottom: 20px;
+    padding-bottom: 0px;
     background-color: white;
     &__text{
         padding: 0 25px;
@@ -22,7 +22,8 @@
     }
     & img{
         max-width: 500px;
-        width: 90%;
+        width: 100%;
+        height: 300px;
     }
     & p{
         font-size: 1.1rem;
@@ -38,7 +39,7 @@
     .showcase{
         flex-direction: row;
         text-align: left;
-        padding: 50px 80px 200px;
+        padding: 20px 80px 50px;
         justify-content: center;
         align-items: center;
         &__text{
@@ -55,8 +56,9 @@
         }
         & img{
             min-width: 450px;
-            width: 680px;
+            width: 500px;
             max-width: 680px;
+            height: 100%;
         }
     }
     
